fixed overflow for posts text

--- a/src/components/Pages/Post/Post.module.scss
+++ b/src/components/Pages/Post/Post.module.scss
@@ -94,6 +94,7 @@
     padding: 0 20px;
     -webkit-mask-image: -webkit-gradient(linear, left top, left bottom,
             from(rgba(0,0,0,1)), to(rgba(0,0,0,1)));
+    overflow: auto;
   }
 
   .Button{
